# flowers

./: main.py  pyproject.toml  read_pdf.py
flowers/parsers/: base.py  swgmc.py
